# MH

./: .gitignore  Main.cabal  Makefile  P1.cabal  README.md  stack.yaml
FUENTES/: Base.hs  CrossV.hs  Ejecutar.hs  KNN.hs  Lectura.hs  Main.hs  P1.hs  P2.hs  P3.hs  Utils.hs
data/: P1.prof  Tablas_APC_2018-19.xls
doc/: Makefile  P1.md  P2.md  P3.md
doc/assets/: descripcion.md  plantilla.tex
src/: P1.hs  Tablas_APC_2018-19.xls
